# MergeAutomation

./: .env.example  .gitignore  README.md  config.json  gitea.py  pyproject.toml  requirements.txt
src/gitea_automation/: __init__.py  cli.py  providers.py
src/gitea_automation/models/: __init__.py  app_config.py  provider_models.py
tests/: conftest.py  test_edge_cases.py  test_models_app_config.py  test_smoke_cli.py  test_unit_checks.py
