[project]
name = "gitea-automation"
version = "0.1.0"
description = "CLI automation for push, pipeline wait, and merge in Gitea, GitHub, and GitLab"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.11.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "uv>=0.7.0",
]
authors = [
    {name = "Alexander Ivanov", email = "VeryComplexAndLongName@gmail.com"}
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
gitea-automation = "gitea_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gitea_automation = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pydantic", "pydantic.*"]
ignore_missing_imports = true
